--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "keywords": [
     "BingMaps"
   ],
+  "files":[
+    "dist"
+  ],
   "author": "Tom Bonner",
   "license": "Apache-2.0",
   "bugs": {
